# tinycache

./: .gitignore  Cargo.toml  README.md
src/: cache.rs  lib.rs  store.rs
