[package]
name = "tinycache"
version = "0.1.0"
edition = "2021"
description = "minimal, simple file cache with binary serialization"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.166", features = ["derive"] }
tracing = { version = "0.1.37", optional = true }
sha1 = "0.10.5"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
